--- a/introduction.html
+++ b/introduction.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/default.css">
-  <title>Introduction</title>
+  <title>Alanah's Charlotte Website | Introduction</title>
 </head>
 
 <body>
 
-  <!-- Header Include -->
-  <div data-include="../components/header.html"></div>
+  <!-- Header Component Include -->
+  <header data-include="components/header.html"></header>
 
   <main>
-    <h1>Alanah Little | Adventurous Lion</h1>
+    <h2>Introduction</h2>
 
     <figure>
       <img src="images/trip.jpg" alt="Photo of Alanah Little" width="400">
@@ -25,7 +25,7 @@
       I'm interested in UX design, usability, and building products that feel simple and helpful.
     </p>
 
-    <h2>Fun Facts About Me</h2>
+    <h3>Fun Facts About Me</h3>
     <ul>
       <li><strong>Personal Background:</strong> I'm currently 20 years old. I love traveling and trying new foods, and I enjoy improving my front-end coding skills each semester.</li>
       <li><strong>Professional Background:</strong> I’m a Server Assistant at Eddie V’s Prime Seafood (1 year 10 months). I also worked at Dick’s Sporting Goods for 1 year, and I was a Taekwondo instructor for 5 years.</li>
@@ -36,7 +36,7 @@
       <li><strong>I’d also like to share:</strong> I was born in California.</li>
     </ul>
 
-    <h2>Courses I’m Taking &amp; Why</h2>
+    <h3>Courses I’m Taking &amp; Why</h3>
     <ol>
       <li>
         <strong>Major Related Courses</strong>
@@ -55,30 +55,26 @@
       </li>
     </ol>
 
-    <h2>Favorite Quote</h2>
+    <h3>Favorite Quote</h3>
     <blockquote>
       “The real voyage of discovery consists not in seeking new landscapes, but in having new eyes.”
       <cite>
         — Marcel Proust
-        (<a href="https://stanphelps.com/the-voyage-of-discovery-is-not-in-seeking-new-landscapes-but-in-having-new-eyes-marcel-proust/" target="_blank" rel="noopener">source</a>)
+        (<a href="https://stanphelps.com/the-voyage-of-discovery-is-not-in-seeking-new-landscapes-but-in-having-new-eyes-marcel-proust/"
+            target="_blank" rel="noopener">source</a>)
       </cite>
     </blockquote>
 
     <p>
-      <a href="https://alittl70.github.io/">Return to Home Page</a>
+      <a href="/index.html">Return to Home Page</a>
     </p>
   </main>
 
-  <p>
-  Page designed by 
-  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
-</p>
+  <!-- Footer Component Include -->
+  <footer data-include="components/footer.html"></footer>
 
-  <!-- Footer Include -->
-  <div data-include="../components/footer.html"></div>
-
-  <!-- HTMLInclude from Paul-Browne -->
-  <script src="../scripts/include.min.js"></script>
+  <!-- HTMLInclude (MUST come after include placeholders) -->
+  <script src="scripts/include.min.js"></script>
 
   <!-- Accumulus -->
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
