--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -1,66 +1,51 @@
-<!-- Must start with this first.-->
 <!DOCTYPE html>
 <html lang="en">
-
-<!--Sets the character encoding so text displays correctly.-->
 <head>
-    <meta charset="UTF-8">
-    <!-- Makes the page responsive on mobile devices.-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!--Title shown on the browser tab.-->
- <title>Alanah Little Adventurous Lion - ITIS 3135 | Contract Page </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles/default.css">
+  <title>Alanah Little | ITIS 3135 | Contract</title>
 </head>
 
-<!-- Everything the user sees on the page goes inside the body.-->
 <body>
 
-<!-- Header Include-->
- <div data-include= "../components/header.html" ></div>
+  <!-- Header Component Include -->
+  <header data-include="../components/header.html"></header>
 
- <!--
- Local navigation specific to this page.
- This is separate from the global header navigation.
- -->
-<nav>
-    <a href = "index.html" > Back | </a>
+  <!-- Local navigation specific to ITIS 3135 pages -->
+  <nav aria-label="ITIS 3135 navigation">
+    <a href="/itis3135/index.html">Back</a>
+  </nav>
 
-</nav>
+  <main>
+    <h1>Contract</h1>
 
-<!--
-Main contents of the webpage.
-is a semantic element that represents
-the primary content of the document. 
--->
-<main>
+    <p>
+      I, Alanah C. Little agree to abide by the terms of the course contract in my Spring 2026,
+      ITIS3135-054, Front-End Web Application Development with my instructor, Professor D.I. von Briesen.
+      I understand that all work that I do on publicly available online tools will be available to the world,
+      and will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
+    </p>
 
-<h1> Contract Page</h1>
+    <p>
+      I also understand that it is my work that counts for attendance, not logins or showing up for class.
+      As such, failure to turn in assignments may show as absences. I also understand that given the structure
+      and content of this class it’s possible to find many examples online or even view my classmates’ code directly.
+      I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly
+      given credit (i.e. external libraries) and never from my classmates.
+      Signed: Alanah C. Little, 01/25/2026
+    </p>
+  </main>
 
-<p>
-    I, Alanah C. Little agree to abide by the terms of the course contract in my Spring 2026, ITIS3135-054, Front-End Web Application Development with my instructor, Professor D.I. von Briesen. I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private. 
-</p>
+  <!-- Footer Component Include -->
+  <footer data-include="../components/footer.html"></footer>
 
-<p>
-    I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e. external libraries) and never from my classmates. Signed: Alanah C. Little , 25/01/2026
-</p>
-</main>
+  <!-- HTMLInclude -->
+  <script src="../scripts/include.min.js"></script>
 
-<p>
-  Page designed by 
-  <a href="alanahlittledesignco.com/">Alanah Little Design Co.</a> &copy; 2026
-</p>
-
-<!-- Footer Include-->
-<div data-include="../components/footer.html"></div>
-
-
-<!-- HTMLInclude from Paul-Browne -->
-<script src= "../scripts/include.min.js"></script>
-
-<!-- Accumulus -->
-<script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <!-- Accumulus -->
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
-
 
