--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <header data-include="components/header.html"></header>
 
   <main>
+
+    <h1>Alanah's Charlotte Website</h1>
     <h2>Home Page</h2>
 
     <p>
